# Hotels

./: .env  Dockerfile  app.py  database_client.py  dependencies.py  docker-compose-ci.yaml  pyproject.toml  settings.py  test_data.csv
import/: Dockerfile  hotels.json
routers/: hotels.py
